--- a/static/css/base.css
+++ b/static/css/base.css
@@ -1,8 +1,8 @@
-html{
+html {
     height: 100%;
 }
 
-body{
+body {
     background: url('/media/homepage_background_cropped.jpg') no-repeat center center fixed;
     background-size: cover;
     height: calc(100vh - 164px);
@@ -10,7 +10,7 @@ body{
     font-family: 'Lato';
 }
 
-/* from bulma */
+/* from Bulma */
 .icon {
     align-items: center;
     display: inline-flex;
@@ -61,18 +61,30 @@ body{
 }
 
 .overlay {
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-    position: fixed;
-    background: white;
-    z-index: -1;
+	height: 100%;
+	width: 100%;
+	top: 0;
+	left: 0;
+	position: fixed;
+	background: white;
+	z-index: -1;
 }
 
 a.category-badge > span.badge:hover {
     background: #212529 !important;
     color: #fff !important;
+}
+
+.btt-button {
+    height: 42px;
+    width: 42px;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+}
+
+.btt-link {
+    cursor: pointer;
 }
 
 /* -------------------------------- Media Queries */
@@ -99,12 +111,13 @@ a.category-badge > span.badge:hover {
     }
 }
 
+/* pad the top a bit when navbar is collapsed on mobile */
 @media (max-width: 991px) {
     .header-container {
         padding-top: 116px;
     }
 
-    .body{
-        height: calc(100vh - 116px)
+    body {
+        height: calc(100vh - 116px);
     }
 }
