--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -37,13 +37,14 @@
                             </td>
                             <td class="py-3">
                                 <p my-0><strong>{{ item.product.name }}</strong></p>
+                                <p class="my-0"><strong>Size: </strong>{% if item.product.has_sizes %}{{ item.size|upper }}{% else %}N/A{% endif %}</p>
                                 <p my-0 small text-muted>SKU: {{ item.product.sku|upper }}</p>
                             </td>
                             <td class="py-3">
                                 <p my-0> {{ item.product.price }}</p>
                             </td>
                             <td class="py-3">
-                                <p my-0> {{ item.product.quantity }}</p>  
+                                <p my-0> {{ item.quantity }}</p>  
                             </td>
                             <td class="py-3">
                                 <p my-0> {{ item.product.price }}</p>  
