Add quantity boxes to shopping bag page

--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -33,7 +33,7 @@
                         {% for item in bag_items %}
                         <tr>
                             <td class="p-3 w-25">
-                                <img src="{{ item.product.url }}" class="img-fluid rounded">
+                                <img src="{{ item.product.image_url }}" class="img-fluid rounded">
                             </td>
                             <td class="py-3">
                                 <p my-0><strong>{{ item.product.name }}</strong></p>
@@ -43,8 +43,38 @@
                             <td class="py-3">
                                 <p my-0> {{ item.product.price }}</p>
                             </td>
-                            <td class="py-3">
-                                <p my-0> {{ item.quantity }}</p>  
+                            <td class="py-3 w-25">
+                                <form class="form uppdate-form" method="POST" action="">
+                                {% csrf_token %}
+                                    <div class="form-group ">
+                                        <div class="input-group">
+                                            <div class="input-group-prepend">
+                                                <button class="decrement-qty btn btn-sm btn-black rounded-0" 
+                                                    data-item_id="{{ item.item_id }}" id="decrement-qty_{{ item.item_id }}">
+                                                    <span>
+                                                        <i class="fas fa-minus fa-sm"></i>
+                                                    </span>
+                                                </button>
+                                            </div>
+                                            <input class="form-control form-control-sm qty_input" type="number"
+                                                name="quantity" value="{{ item.quantity }}" min="1" max="99"
+                                                data-item_id="{{ item.item_id }}" id="id_qty_{{ item.item_id }}">
+                                            <div class="input-group-append">
+                                                <button class="increment-qty btn btn-sm btn-black rounded-0"
+                                                    data-item_id="{{ item.item_id }}" id="increment-qty_{{ item.item_id }}">
+                                                    <span>
+                                                        <i class="fas fa-plus fa-sm"></i>
+                                                    </span>
+                                                </button>
+                                            </div>
+                                            {% if item.product.has_sizes %}
+                                                <input type="hidden" name="product_size" value="{{ item.size }}">
+                                            {% endif %}
+                                        </div>
+                                    </div>
+                                </form>
+                                <a class="update-link text.info" href=""><small>Update</small></a>
+                                <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}" data-size="{{ item.size }}" href=""><small>Remove</small></a>
                             </td>
                             <td class="py-3">
                                 <p my-0> {{ item.product.price }}</p>  
@@ -93,4 +123,31 @@
             </div>
         </div>
     </div>
+{% endblock %}
+
+{% block postloadjs %}
+{{ block.super }}
+{% include 'products/includes/quantity_input_script.html' %}
+<script type="text/javascript">
+    // Update quantity on click
+    $('.update-link').click(function(e){
+        var form = $(this).prev('update-form');
+        form.submit();
+    })
+
+        // Remove item and relaod on click
+    $('.remove-item').click(function(e){
+        var csrfToken = "{{ csrf_token }}";
+        var itemId = $(this).attr('id').split('remove_')[1];
+        var size = $(this).data('size');
+        var url = `bag/remove/${itemId}`;
+        var data = {'csrfmiddlewaretoken': csrfToken, 'size': size}
+        
+        $.post(url, data)
+         .done(function(){
+             location.reload();
+         });   
+    })
+</script>
+
 {% endblock %}
