--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -44,7 +44,7 @@
                                 <p my-0> {{ item.product.price }}</p>
                             </td>
                             <td class="py-3 w-25">
-                                <form class="form uppdate-form" method="POST" action="">
+                                <form class="form update-form" method="POST" action="{% url 'adjust_bag' item.item_id %}">
                                 {% csrf_token %}
                                     <div class="form-group ">
                                         <div class="input-group">
@@ -73,8 +73,8 @@
                                         </div>
                                     </div>
                                 </form>
-                                <a class="update-link text.info" href=""><small>Update</small></a>
-                                <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}" data-size="{{ item.size }}" href=""><small>Remove</small></a>
+                                <a class="update-link text.info"><small>Update</small></a>
+                                <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}" data-size="{{ item.size }}" ><small>Remove</small></a>
                             </td>
                             <td class="py-3">
                                 <p my-0> {{ item.product.price }}</p>  
@@ -128,25 +128,26 @@
 {% block postloadjs %}
 {{ block.super }}
 {% include 'products/includes/quantity_input_script.html' %}
+
 <script type="text/javascript">
     // Update quantity on click
-    $('.update-link').click(function(e){
-        var form = $(this).prev('update-form');
+    $('.update-link').click(function(e) {
+        var form = $(this).prev('.update-form');
         form.submit();
     })
 
-        // Remove item and relaod on click
-    $('.remove-item').click(function(e){
+    // Remove item and reload on click
+    $('.remove-item').click(function(e) {
         var csrfToken = "{{ csrf_token }}";
         var itemId = $(this).attr('id').split('remove_')[1];
-        var size = $(this).data('size');
-        var url = `bag/remove/${itemId}`;
-        var data = {'csrfmiddlewaretoken': csrfToken, 'size': size}
-        
+        var size = $(this).data('product_size');
+        var url = `/bag/remove/${itemId}/`;
+        var data = {'csrfmiddlewaretoken': csrfToken, 'product_size': size};
+
         $.post(url, data)
-         .done(function(){
+         .done(function() {
              location.reload();
-         });   
+         });
     })
 </script>
 
