--- a/bag/templates/bag/bag.html
+++ b/bag/templates/bag/bag.html
@@ -1,4 +1,5 @@
-{% extends "base.html" %} {% load static %} {% block page_header %}
+{% extends "base.html" %} {% load static %} {% load bag_tools %}
+{% block page_header %}
 <div class="container header-container">
     <div class="row">
         <div class="col"></div>
@@ -74,10 +75,10 @@
                                     </div>
                                 </form>
                                 <a class="update-link text.info"><small>Update</small></a>
-                                <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}" data-size="{{ item.size }}" ><small>Remove</small></a>
+                                <a class="remove-item text-danger float-right" id="remove_{{ item.item_id }}" data-product_size="{{ item.size }}" ><small>Remove</small></a>
                             </td>
                             <td class="py-3">
-                                <p my-0> {{ item.product.price }}</p>  
+                                <p my-0> {{ item.product.price | calc_subtotal:item.quantity }}</p>  
                             </td>
                         </tr>
                         {% endfor %}
