--- a/static/css/base.css
+++ b/static/css/base.css
@@ -51,7 +51,6 @@ body {
     color: white !important;
 }
 
-
 .shop-now-button:hover,
 .shop-now-button:active,
 .shop-now-button:focus,
@@ -98,25 +97,29 @@ a.category-badge > span.badge:hover {
 }
 
 .btt-link,
-.uppdate-link,
+.update-link,
 .remove-item {
     cursor: pointer;
 }
 
-/* ----------------------------------------------- bootsrap toasts*/
+input[name='q']::placeholder {
+    color: #aab7c4;
+}
 
-.message-container{
+/* ------------------------------- bootstrap toasts */
+
+.message-container {
     position: fixed;
     top: 72px;
     right: 15px;
-    z-index: 9999999999;
+    z-index: 99999999999;
 }
 
-.custom-toast{
+.custom-toast {
     overflow: visible;
 }
 
-.toast-capper{
+.toast-capper {
     height: 2px;
 }
 
@@ -178,6 +181,60 @@ a.category-badge > span.badge:hover {
   .container {
     max-width: 80%;
   }
+}
+
+/* Allauth form formatting */
+
+.allauth-form-inner-content p {
+    margin-top: 1.5rem; /* mt-4 */
+    color: #6c757d; /* text-secondary */
+}
+
+.allauth-form-inner-content input {
+    border-color: #000;
+    border-radius: 0;
+}
+
+.allauth-form-inner-content label:not([for='id_remember']) {
+    display: none;
+}
+
+.allauth-form-inner-content input::placeholder {
+    color: #aab7c4;
+}
+
+.allauth-form-inner-content button,
+.allauth-form-inner-content input[type='submit'] {
+	/* btn */
+	display: inline-block;
+    font-weight: 400;
+    color: #fff;
+    text-align: center;
+    vertical-align: middle;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+    background-color: #000;
+    border: 1px solid #000;
+    padding: .375rem .75rem;
+    font-size: 1rem;
+    line-height: 1.5;
+    border-radius: 0;
+
+    /* standard bootstrap btn transitions */
+    transition: color .15s ease-in-out,background-color .15s ease-in-out,border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.allauth-form-inner-content button:hover,
+.allauth-form-inner-content input[type='submit']:hover {	
+	color: #fff;
+    background-color: #222;
+    border-color: #222;
+}
+
+.allauth-form-inner-content a {
+	color: #17a2b8; /* text-info */
 }
 
 /* fixed top navbar only on medium and up */
