--- a/checkout/templates/checkout/checkout_success.html
+++ b/checkout/templates/checkout/checkout_success.html
@@ -1,6 +1,5 @@
 {% extends "base.html" %}
 {% load static %}
-{% load bag_tools %}
 
 {% block extra_css %}
     <link rel="stylesheet" href="{% static 'checkout/css/checkout.css' %}">
@@ -28,31 +27,34 @@
 
         <div class="row">
             <div class="col-12 col-lg-7">
-                <div class="order-confirmation-wrapper p2 border">
+                <div class="order-confirmation-wrapper p-2 border">
                     <div class="row">
                         <div class="col">
                             <small class="text-muted">Order Info:</small>
                         </div>
                     </div>
+
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <p class="mb-0 text-black font-weight-bold">Order Number</p>
                         </div>
-                         <div class="col-12 col-md-8 text-md-right">
+                        <div class="col-12 col-md-8 text-md-right">
                             <p class="mb-0">{{ order.order_number }}</p>
                         </div>
                     </div>
+
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <p class="mb-0 text-black font-weight-bold">Order Date</p>
                         </div>
-                         <div class="col-12 col-md-8 text-md-right">
+                        <div class="col-12 col-md-8 text-md-right">
                             <p class="mb-0">{{ order.date }}</p>
                         </div>
                     </div>
+
                     <div class="row">
                         <div class="col">
-                            <small class="text-muted">Order Details</small>
+                            <small class="text-muted">Order Details:</small>
                         </div>
                     </div>
 
@@ -158,6 +160,7 @@
                             <small class="text-muted">Billing Info:</small>
                         </div>
                     </div>
+
                     <div class="row">
                         <div class="col-12 col-md-4">
                             <p class="mb-0 text-black font-weight-bold">Order Total</p>
@@ -184,20 +187,27 @@
                             <p class="mb-0">{{ order.grand_total }}</p>
                         </div>
                     </div>
-
                 </div>
             </div>
         </div>
         <div class="row">
-            <div class="col-12 col-lg-7 text-right">
-                <a href="{% url 'products' %}?category=new_arrivals,deals,clearance" class="btn btn-black rounded-0 my-2">
-					<span class="icon mr-2">
-						<i class="fas fa-gifts"></i>
-					</span>
-					<span class="text-uppercase">Now check out the latest deals!</span>
-				</a>
-            </div>
-        </div>
+			<div class="col-12 col-lg-7 text-right">
+                {% if from_profile %}
+                    <a href="{% url 'profile' %}" class="btn btn-black rounded-0 my-2">
+                        <span class="icon mr-2">
+                            <i class="fas fa-angle-left"></i>
+                        </span>
+                        <span class="text-uppercase">Back to Profile</span>
+                    </a>
+                {% else %}
+                    <a href="{% url 'products' %}?category=new_arrivals,deals,clearance" class="btn btn-black rounded-0 my-2">
+                        <span class="icon mr-2">
+                            <i class="fas fa-gifts"></i>
+                        </span>
+                        <span class="text-uppercase">Now check out the latest deals!</span>
+                    </a>
+                {% endif %}
+			</div>
+		</div>
     </div>
 {% endblock %}
-
